# CTRNN

./: CMakeLists.txt  CTRNN.cpp  CTRNN.cu  CTRNN.h  LICENSE  README.md  build.sh  ctrnn-test.cpp
